# simplecoin

./: Cargo.toml
blockchain.db/: IDENTITY  LOG
src/: block.rs  blockchain.rs  main.rs  pow.rs
