[package]
name = "simplecoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
hex = "0.4.3"
num-bigint = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.181"
sha2 = "0.10.7"
sha256 = "1.2.1"
rocksdb = "0.21.0"
